# aoc2022

./: .pre-commit-config.yaml
.github/workflows/: pre-commit.yml
bazel/: 01.txt  README.md  WORKSPACE  day01.bzl
cpp/: .clang-format  CMakeLists.txt  common.cc  common.hh  day01.cc  day02.cc  day03.cc  day04.cc  day05.cc  day06.cc  day07.cc  day08.cc  main.cc
cpp/days/: day01.cc  day02.cc  day03.cc  day04.cc  day04_std.cc  day05.cc  day06.cc  day07.cc  day08.cc  day09.cc  day10.cc  day11.cc  day12.cc  day14.cc  day18.cc  day25.cc
python/: day01.py  day02.py  day05.py  day06.py  day07.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day18.py  day21.py  day22a.py  day22b.py  day24.py  day25.py
